<resources>
    <string name="app_name">Calculator App</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="_1">1</string>
    <string name="subtraction">-</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="de">DE</string>
    <string name="ce">CE</string>
    <string name="company_name">Simple Calculator App By Hammad and Co\'s.</string>
    <string name="todo">TODO</string>
</resources>